all sorting algorithms are with the sortingAlgorithm implementation and return a Result object